# libplasma

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  PlasmaConfig.cmake.in  PlasmaMacros.cmake  README.md  metainfo.yaml
autotests/: CMakeLists.txt  coronatest.cpp  coronatest.h  dialognativetest.cpp  dialogqmltest.cpp  dummycontainmentaction.cpp  dynamictreemodel.h  themetest.cpp  themetest.h  tooltipareatest.cpp  tooltipareatest.h
autotests/applet/: CMakeLists.txt  applettest.cpp
autotests/declarativetests/: CMakeLists.txt  components.qml  qmltest.cpp
examples/shell/: customcorona.cpp  customcorona.h
examples/testcontainmentactionsplugin/: plasma-containmentactions-test.desktop  plasma-containmentactions-test.json  test.cpp  test.h
po/ar/: libplasma5.po  libplasma6.po
po/ast/: libplasma6.po
po/az/: libplasma5.po  libplasma6.po
po/be/: libplasma5.po  libplasma6.po
po/bg/: libplasma5.po  libplasma6.po
po/bs/: libplasma5.po  libplasma6.po
po/ca/: libplasma5.po  libplasma6.po
po/ca@valencia/: libplasma5.po  libplasma6.po
po/cs/: libplasma5.po  libplasma6.po
po/da/: libplasma5.po  libplasma6.po
po/de/: libplasma5.po  libplasma6.po
po/el/: libplasma5.po  libplasma6.po
po/en_GB/: libplasma5.po  libplasma6.po
po/eo/: libplasma5.po  libplasma6.po
po/es/: libplasma5.po  libplasma6.po
po/et/: libplasma5.po  libplasma6.po
po/eu/: libplasma5.po  libplasma6.po
po/fi/: libplasma5.po  libplasma6.po
po/fr/: libplasma5.po  libplasma6.po
po/ga/: libplasma5.po  libplasma6.po
po/gd/: libplasma5.po  libplasma6.po
po/gl/: libplasma5.po  libplasma6.po
po/he/: libplasma5.po  libplasma6.po
po/hi/: libplasma6.po
po/hu/: libplasma5.po  libplasma6.po
po/ia/: libplasma5.po  libplasma6.po
po/id/: libplasma5.po  libplasma6.po
po/is/: libplasma6.po
po/it/: libplasma5.po  libplasma6.po
po/ja/: libplasma5.po  libplasma6.po
po/ka/: libplasma5.po  libplasma6.po
po/ko/: libplasma5.po  libplasma6.po
po/lt/: libplasma5.po  libplasma6.po
po/lv/: libplasma5.po  libplasma6.po
po/ml/: libplasma5.po  libplasma6.po
po/mr/: libplasma5.po  libplasma6.po
po/nb/: libplasma5.po  libplasma6.po
po/nds/: libplasma5.po  libplasma6.po
po/nl/: libplasma5.po  libplasma6.po
po/nn/: libplasma5.po  libplasma6.po
po/pa/: libplasma5.po  libplasma6.po
po/pl/: libplasma5.po  libplasma6.po
po/pt/: libplasma5.po  libplasma6.po
po/pt_BR/: libplasma5.po  libplasma6.po
po/ro/: libplasma5.po  libplasma6.po
po/ru/: libplasma5.po  libplasma6.po
po/sa/: libplasma6.po
po/sk/: libplasma5.po  libplasma6.po
po/sl/: libplasma5.po  libplasma6.po
po/sr/: libplasma6.po
po/sr@ijekavian/: libplasma6.po
po/sr@ijekavianlatin/: libplasma6.po
po/sr@latin/: libplasma6.po
po/sv/: libplasma5.po  libplasma6.po
po/ta/: libplasma5.po  libplasma6.po
po/tg/: libplasma5.po  libplasma6.po
po/tr/: libplasma5.po  libplasma6.po
po/ug/: libplasma5.po  libplasma6.po
po/uk/: libplasma5.po  libplasma6.po
po/vi/: libplasma5.po  libplasma6.po
po/zh_CN/: libplasma5.po  libplasma6.po
po/zh_TW/: libplasma5.po  libplasma6.po
src/declarativeimports/: CMakeLists.txt  plasmacomponents.qdoc  plasmacomponents.qdocconf
src/declarativeimports/core/: CMakeLists.txt  Mainpage.dox  action.h  corebindingsplugin.cpp  corebindingsplugin.h  plasmacore.qdoc  plasmacore.qdocconf  quicktheme.cpp  quicktheme.h  tooltip.cpp  tooltip.h  tooltiparea.cpp  tooltiparea.h  tooltipdialog.cpp  tooltipdialog.h  windowthumbnail.cpp  windowthumbnail.h
src/declarativeimports/core/private/: DefaultToolTip.qml  DialogBackground.qml
src/desktoptheme/: CMakeLists.txt
src/plasma/: CMakeLists.txt  Mainpage.dox  applet.cpp  applet.h  config-plasma.h.cmake  containment.cpp  containment.h  containmentactions.cpp  containmentactions.h  corona.cpp  corona.h  plasma-index.qdoc  plasma.cpp  plasma.h  plasma.qdoc  plasma.qdocconf  pluginloader.cpp  pluginloader.h  theme.cpp  theme.h
src/plasmaquick/: CMakeLists.txt  Mainpage.dox  appletcontext.cpp  appletcontext_p.h  appletpopup.cpp  appletpopup.h  appletquickitem.cpp  appletquickitem.h  appletquickitem_p.h  configcategory_p.cpp  configcategory_p.h  configmodel.cpp  configmodel.h  configtypes.h  configview.cpp  configview.h  containmentview.cpp  containmentview.h  dialog.cpp  dialog.h  dialogbackground_p.cpp  dialogbackground_p.h  dialogshadows.cpp  dialogshadows_p.h  edgeeventforwarder.cpp  edgeeventforwarder.h  plasmaquick.cpp  plasmaquick.h  plasmaquick.qdoc  plasmaquick.qdocconf  plasmashellwaylandintegration.cpp  plasmashellwaylandintegration.h  plasmatheme.qdoc  plasmatypes.qdoc  plasmawindow.cpp  plasmawindow.h  plasmoidattached_p.h  popupplasmawindow.cpp  popupplasmawindow.h  quickviewsharedengine.h  (+10 more)
src/plasmaquick/plasmoid/: CMakeLists.txt  containmentitem.cpp  containmentitem.h  dropmenu.cpp  dropmenu.h  plasmoiditem.cpp  plasmoiditem.h  types.h  wallpaperitem.cpp  wallpaperitem.h
templates/: CMakeLists.txt
templates/cpp-plasmoid/: cpp-plasmoid.kdevtemplate
templates/cpp-plasmoid6/: CMakeLists.txt  Messages.sh  README.md  cpp-plasmoid6.kdevtemplate
templates/cpp-plasmoid6/src/: CMakeLists.txt  metadata.json  metadata.json.license
templates/cpp-plasmoid6/src/package/: metadata.json
templates/cpp-plasmoid6/src/qml/: main.qml
templates/plasma-wallpaper/: plasma-wallpaper.kdevtemplate
templates/plasma-wallpaper-with-qml-extension/: plasma-wallpaper-with-qml-extension.kdevtemplate
templates/plasma6-wallpaper/: CMakeLists.txt  Messages.sh  README.md  (+1 more)
templates/plasma6-wallpaper-with-qml-extension/: CMakeLists.txt  Messages.sh  README.md  plasma6-wallpaper-with-qml-extension.kdevtemplate
templates/plasma6-wallpaper-with-qml-extension/plugin/: %{APPNAMELC}plugin.cpp  CMakeLists.txt  helloworld.cpp  helloworld.h
templates/qml-plasmoid6/: CMakeLists.txt  Messages.sh  README.md  metadata.json  qml-plasmoid6.kdevtemplate
templates/qml-plasmoid6/package/: metadata.json  metadata.json.license
templates/qml-plasmoid6/package/contents/ui/: main.qml
templates/qml-plasmoid6/qml/: main.qml
(+207 files in other folders)
